--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sp3_crud
 spring.datasource.username=root
 spring.datasource.password=
 spring.sql.init.platform=mysql
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #show sql
 spring.jpa.show-sql=true
